# meeting-transcriber

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
native/speakrs-diarizer/: Cargo.toml  README.md  check-update.sh
native/speakrs-diarizer/src/: main.rs
skills/: transcribe-meeting.md
src/meeting_transcriber/: __init__.py  cli.py  context_loader.py  context_store.py  diarization.py  diarization_speakrs.py  diarization_v2.py  frame_extractor.py  server.py  transcriber.py  voiceprint.py
templates/: project.context.template.yaml
tests/: conftest.py  test_context_loader.py  test_context_store.py  test_voiceprint.py
